# polymorphism

./: .gitignore
fruit/: CMakeLists.txt  fruits.txt  main.cpp  runit.sh
poly-factory-zander/: CMakeLists.txt  README.md  main.cpp
poly-pet-factory-basic/: CMakeLists.txt  main.cpp
poly-pet-factory-read-themselves/: CMakeLists.txt  README.md  pets.cpp  pets0.txt
poly-pet-factory-read-themselves/poly-pet-factory-read-themselves-mac.exe.dSYM/Contents/: Info.plist
poly-pet-factory-self-register/: CMakeLists.txt  README.md  cat.cpp  cat.h  dog.cpp  dog.h  horse.cpp  horse.h  main.cpp  pet.cpp  pet.h  pets0.txt  poly-pet-factory-self-register  runit.sh
poly-pets-sort/: CMakeLists.txt  README.md  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp  pet.cpp  pet.h  runit.sh
